--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -482,6 +482,42 @@
 	<string name="NA">NA</string>
 	<string name="Invoice">Invoice</string>
 	<string name="phone_no_cnt_be_empty">Phone Number can\'t be empty</string>
+	<string name="enter_some_amount">Please enter some amount</string>
+	<string name="enter_less_amount">Please enter less amount</string>
+	<string name="enter_valid_amount">Please enter valid amount</string>
+	<string name="recharge_amount_for_customer">You are recharging \u20B9 %1$s for customer with paytm account on %2$s </string>
+	<string name="Ride">Ride</string>
+	<string name="Ride_id">Ride Id</string>
+	<string name="customer_id">Customer Id</string>
+	<string name="paytm_transaction">Paytm Transaction</string>
+	<string name="phone_no">Phone No.</string>
+	<string name="changed_no_same_as_previous">Changed phone number is same as the previous one
+	</string>
+	<string name="sharing_payment_recieved">Sharing payment recieved for Phone</string>
+	<string name="please_give_customer">We take your feedback seriously. Please give us a rating
+	</string>
+	<string name="start_loc">Start Location</string>
+	<string name="driver_loc">Driver Location</string>
+	<string name="customer_2">Customer 2</string>
+	<string name="kms">Kms</string>
+	<string name="mark_delivered">Mark Delivered</string>
+	<string name="order_id">Order Id</string>
+	<string name="thanks_for_feedback">Thank you for your valuable feedback</string>
+	<string name="total_amnt_till_now">Total Amount Till Now</string>
+	<string name="amnt_credited">Amount Credited</string>
+	<string name="invoice_date">Invoice Date</string>
+	<string name="invoice_id">Invoice Id</string>
+	<string name="total_distance">Total Distance</string>
+	<string name="valid_email_phone_no">Enter valid Email or Phone No.</string>
+	<string name="select_destination">Please select atleast one Destination</string>
+	<string name="JUGNOO">JUGNOO</string>
+	<string name="fatafat_on">Fatafat On</string>
+	<string name="Notifications">Notifications</string>
+	<string name="PAYMENTS">PAYMENTS</string>
+	<string name="enter_customer_phone_no">Enter Customer Phone No.</string>
+	<string name="invoice_detail">INVOICE DETAILS</string>
+	<string name="generated_on">Generated On:</string>
+	<string name="share">Share</string>
 
 
 	<string-array name="CountryCodes" >
