--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Jugnoo Drivers</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+
+	<string name="app_name">Jugnoo Drivers</string>
+	<string name="hello_world">Hello world!</string>
+	<string name="action_settings">Settings</string>
+
+
+
+
+	<string name="google_maps_api_key">AIzaSyA5eOUeuJ8jotmTZBCOBHRKCp-FLGDZ0KM</string> Live
+	<!-- <string name="google_maps_api_key">AIzaSyBsdXoSFcTy5YAIJmpkoIeJ_7peuH1QOUo</string> Dev-->
+	<!--<string name="google_maps_api_key">AIzaSyCgflGVCfOr4aSmmBisoGUe_671qRngy2s</string> &lt;!&ndash; General &ndash;&gt;-->
+
+
+
+	<!-- 8B:D4:A9:9A:B7:67:D4:22:D8:27:0D:A3:EE:3D:62:3B:32:30:CE:3B -->
+
+	<string name="google_maps_browser_key">AIzaSyAPIQoWfHI2iRZkSV8jU4jT_b9Qth4vMdY</string>
+
+
+
+
+	<!-- <string name="fb_app_id">782131025144439</string> -->
+	<string name="fb_app_id">782131025144439</string>
+
 
 	<string name="language_english_text">English</string>
 	<string name="language_hindi_text">हिंदी</string>
 
+
 	<string name="rupee">\u20B9</string>
 	<string name="rupee_zero">\u20B9 0.0</string>
-    <string name="rupee_zero_zero">\u20B9 0000.00</string>
+	<string name="rupee_100">\u20B9 100</string>
+	<string name="rupee_200">\u20B9 200</string>
+	<string name="rupee_500">\u20B9 500</string>
+
+	<string name="rupee_zero_zero">\u20B9 0000.00</string>
+
+
+
 
 	    <!-- \n\nPeople with autos can offer rides to users who find taxis a bit too expensive. -->
 
