sub_feature_string_len_check_multilanguage_support: language list sync with backend

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -518,6 +518,7 @@
 	<string name="invoice_detail">INVOICE DETAILS</string>
 	<string name="generated_on">Generated On:</string>
 	<string name="share">Share</string>
+	<string name="no_language_to_select">Language Option Not Available</string>
 
 
 	<string-array name="CountryCodes" >
